# Easy-Notes

./: .gitignore  Makefile  README.md  docker-compose.yml  log.db  main.py  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: deploy_pipeline.yml
ETL/: export_feedback.py
backend/CRM/: Dockerfile  crm.py
backend/cache/: redis_client.py
backend/dashboard/: Dockerfile  app.py  requirements.txt
backend/extraction_service/: Dockerfile  requirements.txt
backend/extraction_service/app/: main.py
backend/extraction_service/app/routers/: client.py  erp.py  extract.py  remove.py
backend/extraction_service/app/services/: erp_adaptor.py  predictor_main.py
backend/extraction_service/app/utils/: Redis.py  currentuser.py  notifier.py  token.py
backend/prediction_service/: Dockerfile  requirements.txt
backend/prediction_service/api/: main.py  schemas.py
backend/prediction_service/api/backward/: endpoints.py  integration.py
backend/prediction_service/api/forward/: endpoints.py  integration.py
backend/prediction_service/core/: evaluate_cli.py  predictor.py  preprocess_cli.py  trainer.py  trainer_cli.py
backend/prediction_service/phi3/src/: api.py  main.py
backend/prediction_service/phi3/src/Companydoc_csvdata/: eval.py  (+6 more)
backened/extraction_service/app/: main.py
backened/extraction_service/app/routers/: auth.py  client.py  erp.py  extract.py
backened/extraction_service/app/services/: .env  erp_adaptor.py  extractor_llm.py  nlp_model.py  ocr engine.py
backened/extraction_service/app/utils/: logger.py  token.py
backened/prediction_service/api/backward/: endpoints.py  integration.py
backened/prediction_service/core/: data_model.py
database/: Database.py  database.py  hashing.py  main.py  models.py  schemas.py
database/repository/: __init__.py  client.py  feedbackLog.py  user_logs.py
database/schemas/: __init__.py  client.py  feedback.py  userLogs.py
exports/: feedback.csv
(+7 files in other folders)
