[project]
name = "automation-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "crypto>=1.4.1",
    "dotenv>=0.9.9",
    "event-notifier>=1.0.13",
    "fastapi>=0.116.1",
    "huggingface-hub>=0.34.4",
    "jose>=1.0.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-huggingface>=0.3.1",
    "opencv-python>=4.12.0.88",
    "passlib>=1.7.4",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "torch>=2.8.0",
    "transformers>=4.55.3",
    "typing>=3.10.0.0",
    "uvicorn>=0.35.0",
]
