[project]
name = "automation-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "bitsandbytes>=0.48.2",
    "crypto>=1.4.1",
    "datasets>=4.3.0",
    "dotenv>=0.9.9",
    "event-notifier>=1.0.13",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "fitz>=0.0.1.dev2",
    "huggingface-hub>=0.34.4",
    "jose>=1.0.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-huggingface>=0.3.1",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pdf2image>=1.17.0",
    "peft>=0.17.1",
    "pytesseract>=0.3.13",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.43",
    "tensorboardx>=2.6.4",
    "torch>=2.8.0",
    "transformers>=4.55.3",
    "trl>=0.22.2",
    "typing>=3.10.0.0",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = [
    "backend/prediction_service/phi3llm",
]
